Add. donut chart and dynamic update

--- a/package.json
+++ b/package.json
@@ -20,10 +20,16 @@
     "@babel/core": "^7.23",
     "@babel/plugin-syntax-flow": "^7.23",
     "@babel/plugin-transform-react-jsx": "^7.23",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@fontsource/roboto": "^5.2.5",
     "@fortawesome/fontawesome-svg-core": "^1.2",
     "@fortawesome/free-solid-svg-icons": "^5.8",
     "@fortawesome/react-fontawesome": "^0.2",
+    "@mui/material": "^6.4.8",
+    "@mui/styled-engine-sc": "^6.4.6",
     "autoprefixer": "^10.4",
+    "chart.js": "^4.4.8",
     "cors": "^2.8",
     "express": "^4.18",
     "express-oauth2-jwt-bearer": "^1.6.0",
@@ -33,10 +39,12 @@
     "npm-run-all": "^4.1",
     "postcss": "^8.4",
     "react": "^18",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18",
     "react-router-dom": "^5.3",
     "react-scripts": "^5.0",
     "reactstrap": "^9.2",
+    "styled-components": "^6.1.16",
     "typescript": "^4.9"
   },
   "devDependencies": {
