--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@fortawesome/react-fontawesome": "^0.2",
     "@mui/material": "^6.4.8",
     "@mui/styled-engine-sc": "^6.4.6",
+    "@supabase/supabase-js": "^2.49.4",
     "autoprefixer": "^10.4",
     "chart.js": "^4.4.8",
     "cors": "^2.8",
