--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "express-oauth2-jwt-bearer": "^1.6.0",
     "helmet": "^4.4",
     "highlight.js": "^10.0",
+    "lucide-react": "^0.501.0",
     "morgan": "^1.9",
     "npm-run-all": "^4.1",
     "postcss": "^8.4",
