--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
-REACT_APP_SUPABASE_URL = https://your-project-ref.supabase.co
-REACT_APP_SUPABASE_KEY = public-anon-public-key
+REACT_APP_SUPABASE_URL=https://your-project-ref.supabase.co
+REACT_APP_SUPABASE_ANON_KEY=public-anon-public-key
